[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/anima/nodes/AnimaAnimationControl.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/windows/AnimationsWindow.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/anima/ui/windows/AnimaPropertiesWindow.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://addons/anima/ui/AnimaAnimationData.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/anima/ui/windows/AnimaEasingsWindow.tscn" type="PackedScene" id=6]
[ext_resource path="res://addons/anima/ui/property/AnimaPropertyFromTo.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=19]
use_filter = true
font_data = ExtResource( 4 )
__meta__ = {
"_original_size": 18
}

[node name="AnimationControl" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 861.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 853.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeData" type="VBoxContainer" parent="Container"]
margin_right = 1008.0
margin_bottom = 104.0
size_flags_horizontal = 3

[node name="HSeparator" type="HSeparator" parent="Container/TimeData"]
margin_right = 1008.0
margin_bottom = 4.0

[node name="Label3" type="Label" parent="Container/TimeData"]
margin_top = 8.0
margin_right = 1008.0
margin_bottom = 28.0
custom_colors/font_color = Color( 1, 1, 1, 0.501961 )
custom_fonts/font = SubResource( 19 )
text = "Time:"
align = 1

[node name="GridContainer2" type="GridContainer" parent="Container/TimeData"]
margin_top = 32.0
margin_right = 1008.0
margin_bottom = 104.0
custom_constants/vseparation = 8
custom_constants/hseparation = 12
columns = 2

[node name="Label" type="Label" parent="Container/TimeData/GridContainer2"]
margin_top = 6.0
margin_right = 120.0
margin_bottom = 26.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 19 )
text = "duration (s):"

[node name="Duration" parent="Container/TimeData/GridContainer2" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_left = 132.0
margin_right = 1008.0
label = "parent value"
type = 3
can_clear_custom_value = false
show_relative_selector = false

[node name="Label2" type="Label" parent="Container/TimeData/GridContainer2"]
margin_top = 46.0
margin_right = 120.0
margin_bottom = 66.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = SubResource( 19 )
text = "delay (s):"

[node name="Delay" parent="Container/TimeData/GridContainer2" instance=ExtResource( 7 )]
anchor_right = 0.0
margin_left = 132.0
margin_top = 40.0
margin_right = 1008.0
margin_bottom = 72.0
label = "parent value"
type = 3
can_clear_custom_value = false
show_relative_selector = false

[node name="AnimationData" parent="Container" instance=ExtResource( 5 )]
anchor_right = 0.0
margin_top = 108.0
margin_right = 1008.0
margin_bottom = 256.0

[node name="PropertiesWindow" parent="." instance=ExtResource( 3 )]
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 853.0
rect_min_size = Vector2( 512, 300 )

[node name="AnimationsWindow" parent="." instance=ExtResource( 2 )]
modulate = Color( 1, 1, 1, 0 )
margin_bottom = 853.0
rect_min_size = Vector2( 512, 300 )
rect_pivot_offset = Vector2( 504, 292 )

[node name="AnimaEasingsWindow" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 853.0
rect_min_size = Vector2( 512, 300 )
rect_pivot_offset = Vector2( 504, 292 )

[connection signal="vale_updated" from="Container/TimeData/GridContainer2/Duration" to="." method="_on_Duration_vale_updated"]
[connection signal="vale_updated" from="Container/TimeData/GridContainer2/Delay" to="." method="_on_Delay_vale_updated"]
[connection signal="animate_as_changed" from="Container/AnimationData" to="." method="_on_AnimationData_animate_as_changed"]
[connection signal="content_size_changed" from="Container/AnimationData" to="." method="_on_AnimationData_content_size_changed"]
[connection signal="select_animation" from="Container/AnimationData" to="." method="_on_AnimationData_select_animation"]
[connection signal="select_easing" from="Container/AnimationData" to="." method="_on_AnimationData_select_easing"]
[connection signal="select_property" from="Container/AnimationData" to="." method="_on_AnimationData_select_property"]
[connection signal="select_relative_property" from="Container/AnimationData" to="." method="_on_AnimationData_select_relative_property"]
[connection signal="value_updated" from="Container/AnimationData" to="." method="_on_AnimationData_value_updated"]
[connection signal="property_selected" from="PropertiesWindow" to="." method="_on_PropertiesWindow_property_selected"]
[connection signal="animation_selected" from="AnimationsWindow" to="." method="_on_AnimationsWindow_animation_selected"]
[connection signal="easing_selected" from="AnimaEasingsWindow" to="." method="_on_AnimaEasingsWindow_easing_selected"]
